<resources>
    <string name="app_name">FoodSharing</string>
    <string name="facebook_app_id">1763911323822322</string>
    <string name="facebook_application_id">1763911323822322</string>
    <string name="certificate">CC:0D:37:07:00:35:B9:28:1D:8A:89:95:12:0C:89:2D:E3:02:FA:27"</string>
    <string name="food_description_hint">Enter description of the food</string>
    <string name="vegetarian">Vegetarian</string>
    <string name="allergens">Allergens</string>
    <string name="donate">DONATE</string>
    <string name="optional_food_info_hint">(Optional) Any other information e.g. quantity, detail of allergens</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="donate_confirmation_dialog">Thanks for donating!</string>
    <string name="home">Home</string>
    <string name="dialog_message">Thanks for donating!</string>
    <string name="dialog_title">Success</string>
    <string name="donate_address_hint">Please enter the address to collect food from</string>
    <string name="current_location">Current Location</string>

    <string name="provide_pending_offers">Provide pending offers</string>
    <string name="action_logout">Logout</string>
    <string name="firebase_url">https://foodunity-a9577.firebaseio.com</string>

    <string name="closeDrawer">Navigation View</string>
    <string name="openDrawer">Navigation View Closed</string>
    <string name="reserve">RESERVE</string>
    <string name="sign_out">Sign Out</string>
    <string name="error">Error</string>
    <string name="donate_quantity_hint">(Default 1) Enter quantity</string>
    <string name="view_profile">View Profile</string>
    <string name="optional_expiration_date">(Optional) Expiration date</string>
</resources>
