<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/default_padding"
    android:paddingLeft="@dimen/default_padding"
    android:paddingRight="@dimen/default_padding"
    android:paddingTop="@dimen/default_padding"
    android:background="@color/colorBackground">

    <EditText
        android:id="@+id/donate_food_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_margin"
        android:hint="@string/food_description_hint"
        android:textSize="@dimen/donate_text_size"
        android:textColor="@color/colorPrimaryDark"
        android:textColorHint="@color/colorPrimaryLight"/>

    <CheckedTextView
        android:id="@+id/donate_veg_checkbox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/donate_food_description"
        android:layout_margin="@dimen/default_margin"
        android:checkMark="?android:attr/listChoiceIndicatorMultiple"
        android:onClick="checkBoxListener"
        android:text="@string/vegetarian"
        android:textSize="@dimen/donate_text_size"
        android:textColor="@color/colorPrimaryDark"/>

    <CheckedTextView
        android:id="@+id/donate_allergen_checkbox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/donate_veg_checkbox"
        android:layout_margin="@dimen/default_margin"
        android:checkMark="?android:attr/listChoiceIndicatorMultiple"
        android:onClick="checkBoxListener"
        android:text="@string/allergens"
        android:textSize="@dimen/donate_text_size"
        android:textColor="@color/colorPrimaryDark"/>

    <LinearLayout
        android:id="@+id/donate_address_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/donate_allergen_checkbox"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/donate_address"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_margin"
            android:layout_weight="3"
            android:hint="@string/donate_address_hint"
            android:textSize="@dimen/donate_text_size"
            android:textColor="@color/colorPrimaryDark"
            android:textColorHint="@color/colorPrimaryLight"/>

        <Button
            android:id="@+id/donate_location_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="getLocation"
            android:text="@string/current_location"
            android:textSize="18dp"
            android:background="@color/colorPrimary"
            android:textColor="@color/button_text"
            android:padding="12dp"
            />
    </LinearLayout>

    <EditText
        android:id="@+id/donate_quantity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/donate_address_layout"
        android:layout_margin="@dimen/default_margin"
        android:hint="@string/donate_quantity_hint"
        android:inputType="number"
        android:maxLength="2"
        android:textSize="@dimen/donate_text_size"
        android:textColor="@color/colorPrimaryDark"
        android:textColorHint="@color/colorPrimaryLight"/>

    <EditText
        android:id="@+id/donate_expiry"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/donate_quantity"
        android:layout_margin="@dimen/default_margin"
        android:hint="@string/optional_expiration_date"
        android:inputType="date"
        android:textSize="@dimen/donate_text_size"
        android:textColor="@color/colorPrimaryDark"
        android:textColorHint="@color/colorPrimaryLight"/>


    <EditText
        android:id="@+id/donate_optional_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/donate_expiry"
        android:layout_margin="@dimen/default_margin"
        android:hint="@string/optional_food_info_hint"
        android:textSize="@dimen/donate_text_size"
        android:textColor="@color/colorPrimaryDark"
        android:textColorHint="@color/colorPrimaryLight"/>

    <Button
        android:id="@+id/donate__submit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_margin="@dimen/default_margin"
        android:onClick="donateClick"
        android:text="@string/donate"
        android:textSize="@dimen/donate_text_size"
        android:background="@color/colorPrimary"
        android:textColor="@color/button_text"
        android:padding="12dp"/>


</RelativeLayout>